# ROR-TextEditor

./: .gitattributes  Cargo.toml  README.md  README_CN.md  effwwewww  set.sh  test.txt
src/: main.rs  rorlib.rs  terminal.rs
src/modules/: document.rs  filetype.rs  highlighting.rs  rorlib.rs  rormod.rs  row.rs  terminal.rs
v0.1.0/: Cargo.toml  README.md  set.sh
v0.1.0/src/: main.rs
v0.1.0/src/modules/: document.rs  rorlib.rs  row.rs
versions/v0.1.0/: Cargo.toml
versions/v0.1.0/src/modules/: terminal.rs
versions/v0.1.1/: Cargo.toml  README.md  README_CN.md  set.sh
versions/v0.1.1/src/: main.rs
versions/v0.1.1/src/modules/: rormod.rs
versions/v0.1.2/: README.md
versions/v0.1.2/src/: main.rs
versions/v0.1.2/src/modules/: rormod.rs
