[package]
name = "ROR_Text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
regex = "*"
unicode-segmentation = "*"

[profile.release]
panic = 'abort'
opt-level = 3

[profile.dev]
opt-level = 0
