[package]
name = "ror"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1" 
unicode-segmentation = "1.10.0"
clipboard = "0.5.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 0

