[package]
name = "ror"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*" 
# { git = "https://gitlab.redox-os.org/Jezza/termion.git", branch = "windows-support" }
regex = "*"
unicode-segmentation = "*"

[profile.release]
panic = 'abort'
opt-level = 3

[profile.dev]
opt-level = 0
